# ssa-benchmark-replication

./: .env.example  .gitignore  LICENSE  METHODOLOGY.md  README.md  ROADMAP.md  pyproject.toml
runs/: README.md
src/ssa_bench/: __init__.py  cli.py  orchestrator.py
src/ssa_bench/runners/: __init__.py  anthropic.py  base.py
src/ssa_bench/scoring/: exact_match.py
src/ssa_bench/tasks/: __init__.py  corpus.py  niah_single.py
tests/: test_niah_single.py
