[project]
name = "ssa-benchmark-replication"
version = "0.1.0"
description = "Independent replication of Appen's published benchmark of Subquadratic's SSA model (RULER, MRCR, SWE-Bench Verified) from the API tier."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tina Rezvanian" }]

dependencies = [
    "anthropic>=0.39.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[project.scripts]
ssa-bench = "ssa_bench.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssa_bench"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]
